# brain-encoding-video-memorability

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: _common.py  neuroforecast.py  reduce_temporal.py  roi_localization.py  rq1_crossdomain.py  rq1_fingerprint.py  rq1_variance_map.py  temporal_neuroforecast.py
configs/: experiment_rq1.yaml  memento_manifest.csv  stimuli_manifest.csv  subjects.yaml
scripts/: build_memento_manifest.py
src/neurotwin/: __init__.py  anchor.py  fingerprint.py  geometry.py  guidance.py  io.py  responses.py  rois.py  stats.py  synthetic.py  variance.py
tests/: test_anchor.py  test_fingerprint.py  test_guidance.py  test_responses.py  test_stats_io.py  test_subject_api.py  test_variance_geometry.py
