[project]
name = "neurotwin"
version = "0.1.0"
description = "Predictions-only identifiability audit of TRIBE v2 per-subject brain twins"
requires-python = ">=3.9"
license = { text = "CC-BY-NC-4.0" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["nilearn>=0.10", "matplotlib>=3.7"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
